--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -36,6 +36,12 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">版本</label>
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="version" value="{$blueprintInfo.version}"  >
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">材料类型</label>
                 <div class="layui-input-inline">
                     <select  lay-search="" name="material">
