--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -66,6 +66,7 @@
         <th>材料</th>
         <th>形状</th>
         <th>类型</th>
+        <th>版本</th>
         <th>客户</th>
         <th>批量</th>
         <th>图纸工艺</th>
@@ -96,6 +97,7 @@
         <td>{$blueprintInfoList.material|getMaterialType}</td>
         <td>{$blueprintInfoList.material_type|getMateria}</td>
         <td>{$blueprintInfoList.drawing_type}</td>
+        <td>{$blueprintInfoList.version}</td>
         <?php   $clienyname = getClientName($blueprintInfoList['client_id']);?>
         <td> <a href="javascript:;" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$clienyname.clientName}</span> 的图纸明细','{:url(\'index/blueprint/blueprintInfo\',[\'codeId\'=>$clienyname.id,'key'=>'clients'])}')" ><span style="color: #1E9FFF"> <?php  echo $clienyname['clientName'];  ?></span></a></td>
         <td>{$blueprintInfoList.if_batch?"是":"否"}</td>
