删除多余符号

--- a/application/index/view/order/upload_views.html
+++ b/application/index/view/order/upload_views.html
@@ -85,7 +85,7 @@
         var html = '<body>'+
             '<div align="center" style="width: 100%">'+
             '<img id="imgY" style="max-width: 100%;height: auto" src="'+url+'"/>'+
-            '</div>>'+
+            '</div>'+
             '</body>';
         layer.open({
             type: 1,
@@ -100,7 +100,7 @@
         var html = '<body>'+
             '<div align="center" style="max-width:100%">'+
             '<img id="imgY" src="'+url+'"/>'+
-            '</div>>'+
+            '</div>'+
             '</body>';
         var newwindow = window.open('', "_blank",'');
         newwindow.document.write(html);
