--- a/application/index/view/production_records/add_log.html
+++ b/application/index/view/production_records/add_log.html
@@ -99,6 +99,9 @@
             <button class="layui-btn" lay-submit lay-filter="addId">
                 确认添加
             </button>
+            <br>
+            {$drawing}<br>
+            {$task_id}
         </div>
 
 
