--- a/application/index/view/order/order_pdf.html
+++ b/application/index/view/order/order_pdf.html
@@ -29,7 +29,7 @@
 <div class="container bg-white">
     <form onsubmit="return false">
         <div class="mt-3">
-            <a href="{$path}" download="{$name}"><button type="button"  class="btn btn-success">下载</button></a>
+            <a href="{$path}" download="{$name}.pdf"><button type="button"  class="btn btn-success">下载</button></a>
             <button type="button" onclick="window.location.href='{$path}'" class="btn btn-danger">直接打开</button>
         </div>
     </form>
