更该显示方式

--- a/application/index/view/order/upload_views.html
+++ b/application/index/view/order/upload_views.html
@@ -64,7 +64,7 @@
                                 {/if}
                             </td>
                             <td>
-                                <input id="name{$key+1}" class="layui-input" type="text" style="text-align: center"
+                                <input id="name{$key+1}" class="layui-input" type="text" style="min-width: 100px;text-align: center"
                                        value="{$data.describe}" onchange="editName('name{$key+1}',{$data.id})">
                             </td>
                             <td>
