--- a/application/index/view/equipment/edit-equipment-infos.html
+++ b/application/index/view/equipment/edit-equipment-infos.html
@@ -52,13 +52,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label">生产日期</label>
             <div class="layui-input-inline">
-                <input type="text" name="manufacture_date" id="manufacture_date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input" value="{$equipmentInfoList.manufacture_date}">
+                <input type="text" name="manufacture_date" id="manufacture_date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input" value="{$equipmentInfoList.manufacture_date}">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">购买日期</label>
             <div class="layui-input-inline">
-                <input type="text" name="purchasing_date" id="purchasing_date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input" value="{$equipmentInfoList.purchasing_date}">
+                <input type="text" name="purchasing_date" id="purchasing_date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input" value="{$equipmentInfoList.purchasing_date}">
 
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">卖出日期</label>
             <div class="layui-input-inline">
-                <input type="text" name="sell_date" id="sell_date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input" value="{$equipmentInfoList.sell_date}">
+                <input type="text" name="sell_date" id="sell_date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input" value="{$equipmentInfoList.sell_date}">
             </div>
         </div>
         <div class="layui-form-item">
