--- a/application/index/view/product_task/add_product_task.html
+++ b/application/index/view/product_task/add_product_task.html
@@ -30,17 +30,18 @@
       </div>
     </div>
 
-    <div class="layui-form-item">
-      <label class="layui-form-label">设备编号</label>
-      <div class="layui-input-block">
-        <select name="eqpmt_id" lay-verify="required">
-          <option value=""></option>
-          {volist name="equipmentInfo" id="info"}
-          <option value="{$info.id}">{$info.eqpmt_id}--{$info.eqpmt_name}</option>
-          {/volist}
-        </select>
-      </div>
-    </div>
+    <!--<div class="layui-form-item">-->
+      <!--<label class="layui-form-label">设备编号</label>-->
+      <!--<div class="layui-input-block">-->
+        <!--<select name="eqpmt_id" lay-verify="required">-->
+          <!--<option value=""></option>-->
+          <!--{volist name="equipmentInfo" id="info"}-->
+          <!--<option value="{$info.id}">{$info.eqpmt_id}&#45;&#45;{$info.eqpmt_name}</option>-->
+          <!--{/volist}-->
+        <!--</select>-->
+      <!--</div>-->
+    <!--</div>-->
+
     <div class="layui-form-item layui-form-text">
       <label class="layui-form-label">备注</label>
       <div class="layui-input-block">
